--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_10">10dp</dimen>
 </resources>
